*******************************************************************************
*** LEAVE THIS AT THE TOP OF THE FILE ***
don't forget to change the version in code/xversion.cl if you do anything
user visible.
*******************************************************************************

2009-11-20    <mm@franz.com>

	* RELNOTES: add 8.2 notes

2009-11-18  mm  <mm@franz.com>

	* soap.cl: bump patch level to 3

2009-11-04  mm  <mm@franz.com>

	* soapex.cl: 
	    add comment about defunct services
	    comment out services that no longer exist
	    (sp40gen): build client from wsdl
	* xmp-soap.cl: 
	    (xmp-call-method): 
	       add quotes to SOAPAction header [rfe8861]
	    (xmp-call-method): 
	     peek for xmldecl but do not require it [bug17614]
	     peek for Envelope element as well
	* xmp-test.cl: 
	    (ss1): add test to retrieve wsdl  [rfe8375]
	    (ss1): add test for non-SOAP reply
	    (test-clients): call sp40gen
	* xmp-wsdl.cl: 
	    (wsdl-emit-object-classes): 
	     Do not generate accessors for types that do not get a 
	     class definition, such as types with no components.


2009-05-01  Kevin Layer  <layer@gemini.franz.com>

	* xmp-soap.cl: don't use version-from-file

2009-03-17    <mm@FRIGATE>

	* Makefile:  soap.002 ...
	* soap.cl (defpatch): 
	     set patch number to 2 for 8.1,  4 for 8.0,  6 for 7.0
	* xmp-soap.cl (soap-decode-float): 
	     new fn to decode float and double correctly [bug18350]
	
2008-10-30  Kevin Layer  <layer@gemini.franz.com>

	* Makefile: soap.001
	* build.cl: defpatch # for 8.1
	* soap.cl: defpatch for 8.1
    from jkf:
	* xmp-soap.cl: rfe8375: soap server should return wsdl if
	  requested

2007-06-25    <mm@PROA>

	* xmp-wsdl.cl (wsdl-add-form): NEW exported function
	       (wsdl-index-form): add new mode :user to identify code inserted with
	                           wsdl-add-form
	
2007-05-01    <mm@PROA>

	* soapex.cl: add timeout to most examples  [bug16944]
	     and comment about external services
